删除无用博文

--- a/source/_posts/关于转岗的思考.md
+++ b/source/_posts/关于转岗的思考.md
@@ -1,17 +1,17 @@
 ---
 title: 关于转岗的思考
 tags:
-  - Python
-  - git
-  - Android
-  - Java
-  - JavaScript
-  - Hexo
+  - 感悟
+  - 工作
+  - 职场
+  - 思考
 date: 2016-04-17 00:46:33
 author: 风满楼
 ---
 
 在三月份的末尾总算是鼓起了勇气向老大提起了离职的事情，来猎豹也快一年了，工作也挺辛苦的，学到了蛮多关于公司和运营方面的知识。
 技术上基本没有太多的长进，每隔一段时间总会给自己打打鸡血，然后熬夜看书到2点钟，最后也没能坚持下来。
+一鼓作气，再而衰，三而竭，人生有时候需要一点勇气来改变当下的生活~
+enjoy~
 
 
